deployment/01-deployment-ocp/yaml/23-deployable-financialplan.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wealthcare-financialplan
  namespace: wealthcare-ns
  labels:
    app: wealthcare-application
    subname: financialplan
spec:
  selector:
    matchLabels:
      app: wealthcare-application
      subname: financialplan
  replicas: 1
  template:
    metadata:
      labels:
        app: wealthcare-application
        subname: financialplan
    spec:
      containers:
        - name: container-financialplan
          image: "gandhicloudlab/wealthcare-financialplan-ocp-oss:0.0.1"
          imagePullPolicy: Always
          ports:
            - name: my-http
              containerPort: 9092
              protocol: TCP
            - name: https
              containerPort: 8082
          resources:
            requests:
              memory: "500Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "500m"                  
---
apiVersion: v1
kind: Service
metadata:
  name: wealthcare-financialplan
  namespace: wealthcare-ns
  labels:
    app: wealthcare-application
    subname: financialplan      
spec:
  type: LoadBalancer
  ports:
    - name: my-http
      port: 9090
      targetPort: 9092
  selector:
    app: wealthcare-application
    subname: financialplan
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: wealthcare-financialplan
  namespace: wealthcare-ns
  labels:
    app: wealthcare-application
    subname: financialplan
spec:
  path: /
  to:
    kind: Service
    name: wealthcare-financialplan
    weight: 100
  port:
    targetPort: my-http
